[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/ClientMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/changa-regular.tres" type="DynamicFont" id=2]

[node name="ClientMenu" type="VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1278.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="Back" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 549.0
margin_top = 45.0
margin_right = 729.0
margin_bottom = 126.0
rect_min_size = Vector2( 180, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "< BACK"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="IPAddress" type="LineEdit" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 376.0
margin_top = 218.0
margin_right = 901.0
margin_bottom = 303.0
rect_min_size = Vector2( 525, 72 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "The IP-Address of the server to connect to"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
focus_mode = 2
context_menu_enabled = true
placeholder_text = "IP"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Placeholder", "Rect" ]

[node name="Pingcontainer2" type="HBoxContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 350.0
margin_right = 1278.0
margin_bottom = 425.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Grow Direction" ]

[node name="PingInput" type="CheckBox" parent="Pingcontainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 535.0
margin_top = 25.0
margin_right = 559.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="PingLabel" type="Label" parent="Pingcontainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 563.0
margin_right = 742.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Show Ping"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Join" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 528.0
margin_top = 474.0
margin_right = 750.0
margin_bottom = 555.0
rect_min_size = Vector2( 222, 81 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START GAME"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]

[connection signal="text_changed" from="IPAddress" to="." method="_on_IPAddress_text_changed"]

[connection signal="toggled" from="Pingcontainer2/PingInput" to="." method="_on_PingInput_toggled"]

[connection signal="pressed" from="Join" to="." method="_on_Join_pressed"]


